# trevor

./: .pre-commit-config.yaml  README.md  README.rst  pyproject.toml
primes/: primes.py  test_primes.py
tests/: test_basic.py  test_fizzbuzz.py  test_guard_operator.py  test_ordinals.py  test_primes.py  test_sets.py  test_trevor.py  test_xmas.py
