[tool.poetry]
name = "trevor"
version = "0.1.0"
description = ""
authors = ["Jack Kavanagh <jackkav@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.4"
pytest-watch = "^4.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
