[tool.poetry]
name = "trevor"
version = "0.1.0"
description = ""
authors = ["Jack Kavanagh <jackkav@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.4"

[tool.poetry.dev-dependencies]
pytest-watch = "^4.2"
pre-commit = "^1.18"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
